--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-three-sixty",
-  "version": "1.0.4",
+  "name": "@ajibari/vue-three-sixty",
+  "version": "1.0.7",
   "description": "A Vue 360 image rotator",
   "author": {
     "name": "Sistemes i Xarxes informàtiques Calidae S.L.",
@@ -29,7 +29,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "uuid": "^3.4.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.14",
     "vue2-hammer": "^2.1.2"
   },
   "devDependencies": {
@@ -46,6 +46,7 @@
     "minimist": "^1.2.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.8",
+    "rollup-plugin-image-files": "^1.4.2",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.9",
     "vue": "^2.6.14",
